8315923: pretouch_memory by atomic-add-0 fragments huge page unexpectedly