src/hotspot/os/aix/os_aix.cpp
@@ -1886,6 +1886,10 @@ void os::pd_realign_memory(char *addr, size_t bytes, size_t alignment_hint) {
 void os::pd_free_memory(char *addr, size_t bytes, size_t alignment_hint) {
 }
 
+void os::pd_pretouch_memory(void *start, void *end, size_t page_size) {
+  pretouch_memory_fallback(start, end, page_size);
+}
+
 void os::numa_make_global(char *addr, size_t bytes) {
 }
 
